2023-08-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-file-exists-command): Do not call
	`tramp-get-ls-command'.  (Bug#65321)

2023-08-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-perl-file-name-all-completions): Extend.  It
	shall return also some basic file attributes.
	(tramp-bundle-read-file-names): Simplify data to be transferred.
	(tramp-sh-handle-file-name-all-completions): Read additional attributes.
	(tramp-sh-handle-expand-file-name): Check also "doas".
	(tramp-bundle-read-file-names): Handle changed data layout.
	(tramp-find-file-exists-command): Set "file-exists-p" file property.

2023-08-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Fix last change.

2023-08-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region):
	Handle `last-coding-system-used'.
	(tramp-handle-write-region):
	* tramp-adb.el (tramp-adb-handle-write-region):
	* tramp-smb.el (tramp-smb-handle-write-region):
	* tramp-sshfs.el (tramp-sshfs-handle-write-region):
	Set `coding-system-used'.  (Bug#65022)

	* tramp-sh.el (tramp-sh-handle-write-region):
	Move `last-coding-system-used' handling to
	`tramp-skeleton-write-region'.

2023-08-07  Po Lu  <luangruo@yahoo.com>

	* tramp.el (tramp-encoding-shell): Where /bin/sh was previously
	used, use /system/bin/sh on Android.

2023-08-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Fix scoping.  (Bug#65022)

2023-08-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-convert-file-attributes): Extract SELinux context.

	* tramp-sh.el (tramp-stat-file-attributes-with-selinux)
	(tramp-stat-directory-files-and-attributes-with-selinux): New defconst.
	(tramp-do-file-attributes-with-ls)
	(tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Return also
	SELinux context.