@@ -1,7 +1,9 @@
 2023-08-16  Michael Albinus  <michael.albinus@gmx.de>
 
-	* tramp-sh.el (tramp-find-file-exists-command): Do not call
-	`tramp-get-ls-command'.  (Bug#65321)
+	* tramp-sh.el (tramp-bundle-read-file-names): Replace "echo -n" by
+	"printf", it isn't portable.  (Bug#65321)
+	(tramp-find-file-exists-command): Do not call
+	`tramp-get-ls-command'.
 
 2023-08-15  Michael Albinus  <michael.albinus@gmx.de>
 
